# basic-chat-redux

./: .gitattributes  .gitignore  README.md  agent1.keystore  alice.key  bob.key  conductor-config-alice.toml  conductor-config-bob.toml  conductor-config.toml  config.nix  holoscape-bundle.toml  package.json
dna-src/: app.json
dna-src/test/: config.js  index.js  package-lock.json  package.json
dna-src/test/agent/: messages.js
dna-src/test/scenario/: 4-agents.js
dna-src/utils/: Cargo.toml
dna-src/utils/src/: lib.rs
dna-src/zomes/chat/code/: .hcbuild  Cargo.toml
dna-src/zomes/chat/code/src/: lib.rs  utils.rs
dna-src/zomes/chat/code/src/anchor/: mod.rs
dna-src/zomes/chat/code/src/conversation/: handlers.rs  mod.rs
dna-src/zomes/chat/code/src/member/: handlers.rs  mod.rs
dna-src/zomes/chat/code/src/message/: mod.rs
ui-src/: package-lock.json  package.json
ui-src/public/: index.html
ui-src/src/: index.js
ui-src/src/components/ConversationHeader/: index.js
ui-src/src/components/ConversationList/: index.js
ui-src/src/components/CreateMessageForm/: index.js
ui-src/src/components/Group/: index.js
ui-src/src/components/Message/: index.js
ui-src/src/components/MessageList/: index.js
ui-src/src/components/RegisterScreen/: index.js
ui-src/src/components/UserList/: index.js
