[package]
  name = "basic_chat"
  version = "0.0.17"
  authors = ["willem <willemolding@gmail.com>, Philip Beadle <philip.beadle@holo.host>"]
  edition = "2018"
[dependencies]
  serde = "=1.0.104"
  serde_json = { version = "=1.0.47", features = ["preserve_order"] }
  serde_derive = "=1.0.104"
  derive_more = "0.9.0"
  validator = "0.9.0"
  validator_derive = "0.9.0"

  hdk = "0.0.46-alpha1"
  hdk_proc_macros = "0.0.46-alpha1"
  holochain_json_derive = "0.0.23"

[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]
